Simplify and reorganize `AGENTS.md` documentation